# csc_122_lvalues_and_rvalues

./: 10_shallow_copy_constructor.cpp  11_deep_copy_constructor.cpp  12_copy_and_swap.cpp  1_definitions.cpp  2_functions_returning_rvalues.cpp  3_functions_returning_lvalues.cpp  4_lvalue_to_rvalue_conversion.cpp  5_references.cpp  6_lvalue_references.cpp  7_rvalue_references.cpp  8_lvalue_and_rvalue_references.cpp  9_default_copy_constructor.cpp  CMakeLists.txt  README.md
